--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ html(lang='en')
 		meta(charset='UTF-8')
 		meta(name='viewport' content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0')
 		link(href='https://fonts.googleapis.com/css?family=Montserrat|Oleo+Script' rel='stylesheet' type='text/css')
-		link(rel='stylesheet' href='./public/app.css')
+		link(rel='stylesheet' href='./app.css')
 	body
 		section#main-container
 	footer.site-footer
