--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
 	head
-		title MyGram
+		title=title
 		meta(charset='UTF-8')
 		meta(name='viewport' content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0')
 		link(href='https://fonts.googleapis.com/css?family=Montserrat|Oleo+Script' rel='stylesheet' type='text/css')
