--- a/public/app.css
+++ b/public/app.css
@@ -6226,9 +6226,10 @@ body {
   padding: 10px 0;
   text-align: center; }
 
-.signup-box .mygram {
+.mygram {
   font-family: 'Oleo Script', cursive;
-  font-size: 42px; }
+  font-size: 42px;
+  color: #125688 !important; }
 
 .signup-form {
   width: 65%;
@@ -6247,3 +6248,12 @@ body {
 
 .signup-form .btn.btn-signup, .signup-form .btn-signup.btn-large {
   background-color: #125688; }
+
+.header {
+  background-color: white;
+  color: #125688;
+  box-shadow: none;
+  border-bottom: 1px solid #edeeee; }
+
+#main-container {
+  margin: 0; }
