--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,7 @@ html(lang='en')
 		meta(charset='UTF-8')
 		meta(name='viewport' content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0')
 		link(href='https://fonts.googleapis.com/css?family=Montserrat|Oleo+Script' rel='stylesheet' type='text/css')
+		link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css')
 		link(rel='stylesheet' href='./app.css')
 
 		link(rel='apple-touch-icon', sizes='57x57', href='/apple-icon-57x57.png')
