--- a/index.scss
+++ b/index.scss
@@ -7,7 +7,7 @@ body {
 	color: $secondary-color;
 	font-family: 'Montserrat', sans-serif;
 }
-#main-container	{
+.landing {
 	margin: 30px auto;
 }
 .iphone {
@@ -56,6 +56,6 @@ body {
 	border-bottom: 1px solid #edeeee;
 }
 
-#main-container {
-	margin: 0;
+.timeline {
+	padding: 30px 0;
 }
