--- a/index.scss
+++ b/index.scss
@@ -1,4 +1,5 @@
 $secondary-color: #125688;
+$platzigram-red: #f44336;
 
 @import "node_modules/materialize-css/sass/materialize.scss";
 
@@ -61,6 +62,7 @@ body {
 }
 
 $avatar-size: 48px;
+$avatar-size-big: 150px;
 
 .avatar {
 	width: $avatar-size;
@@ -85,11 +87,11 @@ $avatar-size: 48px;
 .card i {
 	font-size: 30px;
 }
-.card .fa-heart-o {
+.fa-heart-o {
 	color: $secondary-color;
 }
 .card .fa-heart {
-	color: #f44336;
+	color: $platzigram-red;
 	display: none;
 }
 .card.liked {
@@ -134,4 +136,58 @@ $avatar-size: 48px;
 
 .modal-footer button {
 	float: none !important;
+}
+
+.user-page {
+  margin-top: 30px;
+
+  .heading {
+    margin-bottom: 20px;
+  }
+
+  .picture-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 400px;
+    margin-bottom: 20px;
+    position: relative;
+
+    &:hover {
+      .picture {
+        @include prefix(filter, blur(5px) grayscale(100%));
+      }
+
+      .likes {
+        display: flex;
+      }
+    }
+
+    .picture {
+      margin-bottom: 20px;
+      display: block;
+      max-width: 100%;
+      max-height: 100%;
+    }
+
+    .likes {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      text-align: center;
+      display: none;
+      justify-content: center;
+      align-items: center;
+      color: $platzigram-red;
+      font-size: 34px;
+      display: none
+    }
+
+    .fa-heart {
+      margin-right: 8px;
+      display: inline-block;
+    }
+  }
 }
