--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ html(lang='en')
 		meta(name='viewport' content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0')
 		link(href='https://fonts.googleapis.com/css?family=Montserrat|Oleo+Script' rel='stylesheet' type='text/css')
 		link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css')
-		link(rel='stylesheet' href='./app.css')
+		link(rel='stylesheet' href='/app.css')
 
 		link(rel='apple-touch-icon', sizes='57x57', href='/apple-icon-57x57.png')
 		link(rel='apple-touch-icon', sizes='60x60', href='/apple-icon-60x60.png')
@@ -31,4 +31,4 @@ html(lang='en')
 			
 		script(src='https://code.jquery.com/jquery-2.2.3.min.js', integrity='sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=', crossorigin='anonymous')
 		script(src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js')
-		script(type='application/javascript' src='./app.js')
+		script(type='application/javascript' src='/app.js')
